tests/errors/references/array_nested_mut_method_call_imm_ref2.duck
struct S {} impl { mut fn m() {} }

fn main() {
    const arr = [[&S {}]];
    arr[0][0].m();
}
